# BanditPAM

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  BanditPam_log  CMakeLists.txt  Dockerfile  KMedoidsLogfile  MANIFEST.in  README.ipynb  README.md  README_backup.md  comparison.sh  cpplint.cfg  data1.csv  debug_sample_complexity.sh  del.py  env_setup.sh  example_one.py  example_two.py  gen_test.py  hacky_compiler_check.py  kmediods_naive.cpp  kmediods_naive.hpp  kmedoids_ucb.cpp  kmedoids_ucb.hpp  multiply.py  pipeline.txt  plot_bounds.py  pseudo.txt  pyproject.toml  readme_ex1.py  readme_ex2.py  repro_script.py  repro_script.sh  requirements.txt  run_all_bfp_exps.sh  scrna_repro_script.sh  (+6 more)
BanditPAM.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
R_package/BanditPAM/: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE.md  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  cleanup  configure  configure.ac
R_package/BanditPAM/R/: BanditPAM-package.R  KMedoid.R  KMedoid.R~  RcppExports.R  onload.R
R_package/BanditPAM/docs/: 404.html  LICENSE-text.html  LICENSE.html  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
R_package/BanditPAM/docs/articles/: index.html  kmediods.html
R_package/BanditPAM/docs/news/: index.html
R_package/BanditPAM/docs/reference/: BanditPAM-package.html  KMedoids.html  bpam_num_threads.html  dot-KMedoids__fit.html  dot-KMedoids__get_build_conf.html  dot-KMedoids__get_k.html  dot-KMedoids__get_loss_fn.html  dot-KMedoids__get_max_iter.html  dot-KMedoids__get_medoids_final.html  dot-KMedoids__get_statistic.html  dot-KMedoids__get_swap_conf.html  dot-KMedoids__new.html  dot-KMedoids__set_iter.html  dot-KMedoids__set_k.html  dot-KMedoids__set_loss_fn.html  index.html
R_package/BanditPAM/inst/misc/: hexpic.R  time.R
R_package/BanditPAM/inst/tinytest/: test_BanditPAM.R
R_package/BanditPAM/man/: BanditPAM-package.Rd  KMedoids.Rd  bpam_num_threads.Rd  dot-KMedoids__fit.Rd  dot-KMedoids__get_build_conf.Rd  dot-KMedoids__get_k.Rd  dot-KMedoids__get_loss_fn.Rd  dot-KMedoids__get_max_iter.Rd  dot-KMedoids__get_medoids_final.Rd  dot-KMedoids__get_statistic.Rd  dot-KMedoids__get_swap_conf.Rd  dot-KMedoids__new.Rd  dot-KMedoids__set_iter.Rd  dot-KMedoids__set_k.Rd  dot-KMedoids__set_loss_fn.Rd
R_package/BanditPAM/src/: Makevars  Makevars.win  RcppExports.cpp  banditpam.cpp  banditpam.hpp  banditpam_common.h  banditpam_orig.cpp  banditpam_orig.hpp  fastpam1.cpp  fastpam1.hpp  kmedoids.cpp  kmedoids_algorithm.cpp  kmedoids_algorithm.hpp  myomp.h  pam.cpp  pam.hpp
R_package/BanditPAM/tests/: testthat.R  tinytest.R
R_package/BanditPAM/vignettes/: banditpam.bib  kmediods.Rmd
banditPAM.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
banditpam.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: MNIST_100.csv  build_smaller_scrna.py  data1.csv  data2.csv  inspect_scrna.py  mnist_change_size.py  preprocess_cifar.py
docs/: Doxyfile  Doxyfile.bak  headerFile  install_linux.md  install_mac.md  install_windows.md  long_desc.rst
experiments/: run_all_versions.py  run_cifar_experiment.py  run_scaling_experiment.py  scaling_experiment.py
headers/: banditpam.hpp  banditpam_common.h  fastpam1.hpp  getopt.h  kmediods_naive.hpp  kmedoids_ucb.hpp  (+7 more)
headers/carma/: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  carma.h  carma_config.cmake
headers/carma/.github/workflows/: coverage.yml  linux.yml  macos.yml  test_matrix.yml  test_numpy.yml  valgrind.yml  windows.yml
headers/carma/.travis-ci/: before_script.sh  configure.sh  install.sh  install_sonar.sh  load_env.sh  sonar_analysis.sh
headers/carma/carma/: arraystore.h  converters.h  nparray.h  utils.h
headers/carma/cmake/: BuildType.cmake  ClangFormatProcess.cmake  ClangFormatTarget.cmake  CoverageTarget.cmake  ParseOptions.cmake  ReleaseSettings.cmake  ThirdPartyTargets.cmake
headers/carma/docs/source/: basic_usage.rst  carma.rst  conf.py  index.rst  introduction.rst  memory_management.rst
headers/carma/examples/: CMakeLists.txt  arraystore.cpp  arraystore.h  automatic_conversion.cpp  automatic_conversion.h  carma_examples.py  example.cpp  example_bindings.cpp  manual_conversion.cpp  manual_conversion.h
headers/carma/include/: carma
headers/carma/include/carma_bits/: armatonumpy.h  arraystore.h  cnumpy.h  config.h  config.h.in  converters.h  nparray.h  numpyapi.h  numpytoarma.h  utils.h
headers/carma/lci/: Dockerfile  carma_valgrind.sh
headers/carma/lci/base/: Dockerfile
headers/carma/tests/: CMakeLists.txt  debug.py  test_arr_to_mat.py  test_arraystore.py  test_loading.py  test_mat_to_arr.py  test_nparray.py  test_type_caster.py
headers/carma/tests/src/: bindings.cpp  test_arr_to_mat.cpp  test_arr_to_mat.h  test_arr_to_mat_native.cpp  test_arraystore.cpp  test_arraystore.h  test_arraystore_native.cpp  test_main.cpp  test_mat_to_arr.cpp  test_mat_to_arr.h  test_mat_to_arr_native.cpp  test_nparray.cpp  test_nparray.h  test_type_caster.cpp  test_type_caster.h
src/: CMakeLists.txt  banditpam.cpp  banditpam.cpp.before_thread_9sep  build_medoids_python.cpp  fastpam1.cpp  fit_python.cpp  getopt.cpp  kmediods_naive.cpp  kmedoids_algorithm.cpp  kmedoids_algorithm.cpp.22Aug2021  kmedoids_algorithm.cpp.bkup  kmedoids_naive.cpp  kmedoids_pywrapper.cpp  kmedoids_ucb.cpp  kmedoids_ucb_updated.cpp  kmeds_pywrapper.cpp  labels_python.cpp  main.cpp  main2.cpp  medoids_python.cpp  pam.cpp  steps_python.cpp  timing.py
src/algorithms/: banditfasterpam.cpp  banditpam.cpp  banditpam_orig.cpp  banditpam_p.cpp  banditpam_v3.cpp  fasterpam.cpp  fastpam1.cpp  kmedoids_algorithm.cpp  pam.cpp
src/python_bindings/: build_medoids_python.cpp  cache_python.cpp  fit_python.cpp  kmedoids_pywrapper.cpp  labels_python.cpp  loss_fn_python.cpp  loss_python.cpp  medoids_python.cpp  steps_python.cpp  swap_times_python.cpp
tests/: CMakeLists.txt  constants.py  dataset_test.cpp  method_test.py  naive_test.cpp  test_commit.py  test_initialization.py  test_larger.py  test_push.py  test_small_mnist.py  test_smaller.py  time_scaling_test.cpp  utils.py
(+4588 files in other folders)
